--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -148,6 +148,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.6</version>
 		</dependency>
+		<!-- XSS -->
+		<dependency>
+			<groupId>com.navercorp.lucy</groupId>
+			<artifactId>lucy-xss</artifactId>
+			<version>1.6.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
